moved to java 8 & fixed some code smells